tester/testsuite/extensions/objects1/bad/bad009.jl
class A {
    int x;
}

int main() {
    A a = new A;
    a.x++;
    return 1;
}
